--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "news-api",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "1. ### Introduction",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
@@ -12,5 +12,14 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "mongoose": "^5.2.9"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/IWatchingYou/NodeJS_RESTful_API.git"
+  },
+  "bugs": {
+    "url": "https://github.com/IWatchingYou/NodeJS_RESTful_API/issues"
+  },
+  "homepage": "https://github.com/IWatchingYou/NodeJS_RESTful_API#readme"
 }
